--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,6 +1,7 @@
 thickbrick == 0.1.1
 numpy == 1.16.2
-scipy == 1.5.1
+scipy == 1.4.1
 matplotlib == 3.0.2
 tensorflow == 2.2.0
 ipywidgets == 7.5.1
+widgetsnbextension == 3.5.1
