--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -4,4 +4,4 @@ scipy == 1.4.1
 matplotlib == 3.0.2
 tensorflow == 2.2.0
 ipywidgets == 7.5.1
-widgetsnbextension == 3.5.1
+jupyter_contrib_nbextensions == 0.5.1
